Made it look a bit better

--- a/index.html
+++ b/index.html
@@ -1,43 +1,72 @@
 <html>
 
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="styles.css">
   
   <head>
     <title>Tim Wood</title>
   </head>
 
   <body>
-    <h1>Tim Wood</h1>
+    <!-- Left side panels -->
+    <div class="leftsidebar"></div>
+    <div class="leftshadow"></div>
+    
+    <!-- Right side panels -->
+    <div class="rightsidebar"></div>
+    <div class="rightshadow"></div>
 
-    <h2>About Me</h2>
-    <h3>Work</h3>
-    <p>I am a PhD Student at the University of Bristol, currently working
-    at KU Leuven, Belgium.  My supervisor is Nigel Smart.</p>
-    <h3>Education</h3>
-    <p>I hold a first class master's degree in
-    mathematics (MMath) from the University of Warwick and a diploma
-    of music performance with distinction (DipLCM) from the London
-    College of Music.</p>
-    <h3>Not Work</h3>
-    <p>In my spare time, I enjoy playing the piano, doing cryptic
-    crosswords, and worshipping at Kensington Baptist Church, Bristol.</p>
-
-    <h2><a href="tim-wood-cv.pdf">Curriculum Vitae</a></h2>
-    Last updated 01/10/2018.
-
-    <h2>Publications</h2>
-    <h3>Error Detection in Monotone Span Programs with Application to
-    Communication-Efficient Multi-Party Computation</h3>
-    <h4>Nigel Smart and Tim Wood</h4>
-    <p><a href="ia.cr/2018/467">ePrint</a></p>
-    <h3>Reducing Communication Channels in MPC</h3>
-    <h4>Marcel Keller, Nigel Smart, Dragos Rotaru and Tim Wood</h4>
-    <p>Published at SCN 2018
-    <a href="ia.cr/2017/492">ePrint</a>, <a href="scn18.bib">bibtex</a>, <a href="talk-scn18.pdf">slides</a></p>
-    <h3>When it's all just too much: Outsourcing MPC Preprocessing</h3>
-    <h4>Peter Scholl, Nigel Smart and Tim Wood</h4>
-    <p>Published at IMACC 2017
-    <a href="ia.cr/2017/262">ePrint</a>, <a href="ima17.bib">bibtex</a>, 
-    <a href="talk-ima17.pdf">slides</a></p>
+    <div style="padding-left:22%; padding-right:25%; padding-top:5px">
+      <h1>Tim Wood</h1>
+      <ul>
+	<li><h2>About Me</h2>
+	  <ul>
+	    <li><h3>Work</h3>
+	      <p>I am a PhD Student at the University of Bristol, currently working
+		at KU Leuven, Belgium.  My supervisor is Nigel Smart
+		and I specialise in multiparty computation (MPC) and
+		linear secret sharing schemes (LSSS).</p></li>
+	    <li><h3>Education</h3>
+	      <p>I hold a first class Master of Mathematics (MMath)
+		from the University of Warwick and a Diploma of Music
+		Performance (DipLCM) with distinction from the London
+		College of Music.</p></li>
+	    <li><h3>Not Work and Not Education</h3>
+	      <p>In my spare time, I enjoy playing the piano, doing cryptic
+		crosswords, and worshipping at Kensington Baptist Church, Bristol.</p></li>
+	  </ul>
+	<li><h2><a href="tim-wood-cv.pdf">Curriculum Vitae</a></h2>
+	  <ul>
+	    <li><p>Last updated 01/10/2018.</p></li>
+	  </ul>
+	</li>
+	<li><h2>Publications</h2>
+	  <ul>
+	    <li><h3>Error Detection in Monotone Span Programs with Application to
+		Communication-Efficient Multi-Party Computation</h3>
+	      <ul>
+		<li><h4>Nigel Smart and Tim Wood</h4></li>
+		<li><p>Available on <a href="http://ia.cr/2018/467">ePrint</a></p></li>
+	      </ul>
+	    </li>
+	    <li><h3>Reducing Communication Channels in MPC</h3>
+	      <ul>
+		<li><h4>Marcel Keller, Nigel Smart, Dragos Rotaru and Tim Wood</h4></li>
+		<li><p>Published at SCN 2018
+		    <a href="http://ia.cr/2017/492">ePrint</a> <a href="scn18.bib">bibtex</a> <a href="talk-scn18.pdf">slides</a></p></li>
+	      </ul>
+	    </li>
+	    <li><h3>When it's all just too much: Outsourcing MPC
+		Preprocessing</h3>
+	      <ul>
+		<li><h4>Peter Scholl, Nigel Smart and Tim Wood</h4></li>
+		<li><p>Published at IMACC
+		2017 <a href="http://ia.cr/2017/262">ePrint</a> <a href="ima17.bib">bibtex</a>
+		    <a href="talk-ima17.pdf">slides</a></p></li>
+	      </ul>
+	    </li>
+	  </ul>
+	</li>
+      </ul>
+    </div>
   </body>
 </html>
