--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+
     <!-- Left side panels -->
     <div class="leftsidebar"></div>
     <div class="leftshadow"></div>
@@ -15,58 +16,35 @@
     <div class="rightsidebar"></div>
     <div class="rightshadow"></div>
 
-    <div style="padding-left:22%; padding-right:25%; padding-top:5px">
-      <h1>Tim Wood</h1>
-      <ul>
-	<li><h2>About Me</h2>
-	  <ul>
-	    <li><h3>Work</h3>
-	      <p>I am a PhD Student at the University of Bristol, currently working
-		at KU Leuven, Belgium.  My supervisor is Nigel Smart
-		and I specialise in multiparty computation (MPC) and
-		linear secret sharing schemes (LSSS).</p></li>
-	    <li><h3>Education</h3>
-	      <p>I hold a first class Master of Mathematics (MMath)
-		from the University of Warwick and a Diploma of Music
-		Performance (DipLCM) with distinction from the London
-		College of Music.</p></li>
-	    <li><h3>Not Work and Not Education</h3>
-	      <p>In my spare time, I enjoy playing the piano, doing cryptic
-		crosswords, and worshipping at Kensington Baptist Church, Bristol.</p></li>
-	  </ul>
-	<li><h2><a href="tim-wood-cv.pdf">Curriculum Vitae</a></h2>
-	  <ul>
-	    <li><p>Last updated 01/10/2018.</p></li>
-	  </ul>
-	</li>
-	<li><h2>Publications</h2>
-	  <ul>
-	    <li><h3>Error Detection in Monotone Span Programs with Application to
-		Communication-Efficient Multi-Party Computation</h3>
-	      <ul>
-		<li><h4>Nigel Smart and Tim Wood</h4></li>
-		<li><p>Available on <a href="http://ia.cr/2018/467">ePrint</a></p></li>
-	      </ul>
-	    </li>
-	    <li><h3>Reducing Communication Channels in MPC</h3>
-	      <ul>
-		<li><h4>Marcel Keller, Nigel Smart, Dragos Rotaru and Tim Wood</h4></li>
-		<li><p>Published at SCN 2018
-		    <a href="http://ia.cr/2017/492">ePrint</a> <a href="scn18.bib">bibtex</a> <a href="talk-scn18.pdf">slides</a></p></li>
-	      </ul>
-	    </li>
-	    <li><h3>When it's all just too much: Outsourcing MPC
-		Preprocessing</h3>
-	      <ul>
-		<li><h4>Peter Scholl, Nigel Smart and Tim Wood</h4></li>
-		<li><p>Published at IMACC
-		2017 <a href="http://ia.cr/2017/262">ePrint</a> <a href="ima17.bib">bibtex</a>
-		    <a href="talk-ima17.pdf">slides</a></p></li>
-	      </ul>
-	    </li>
-	  </ul>
-	</li>
-      </ul>
+    <!-- Side navigation -->
+    <div class="sidenav">
+      <a href="index.html">About me</a>
+      <a href="cv.html">CV</a>
+      <a href="publications.html">Publications</a>
     </div>
+
+    <div style="padding-left:22%; padding-right:25%; padding-top:5px">
+      <div style="font-size:30px; padding-top:20px;
+		  padding-bottom:30px">
+	<strong>Tim Wood</strong>
+	<hr style="border-top:3px solid #000000">
+      </div>
+      
+      <h2><a name=about>About Me</a></h2>
+      <ul>
+	<li><h3>Work</h3>
+	  <p>I am a PhD student at the University of Bristol, currently working
+	    at KU Leuven, Belgium.  My supervisor is Nigel Smart
+	    and I specialise in multiparty computation (MPC) and
+	    linear secret sharing schemes (LSSS).</p></li>
+	<li><h3>Education</h3>
+	  <p>I hold a first class Master of Mathematics (MMath)
+	    from the University of Warwick and a Diploma of Music
+	    Performance (DipLCM) with distinction from the London
+	    College of Music.</p></li>
+	<li><h3>Not Work and Not Education</h3>
+	  <p>In my spare time, I enjoy playing the piano, doing cryptic
+	    crosswords, and worshipping at Kensington Baptist Church, Bristol.</p></li>
+      </ul>
   </body>
 </html>
