=Removed side borders

--- a/cv.html
+++ b/cv.html
@@ -8,14 +8,6 @@
 
   <body>
 
-    <!-- Left side panels -->
-    <div class="leftsidebar"></div>
-    <div class="leftshadow"></div>
-    
-    <!-- Right side panels -->
-    <div class="rightsidebar"></div>
-    <div class="rightshadow"></div>
-
     <!-- Side navigation -->
     <div class="sidenav">
       <a href="index.html">About me</a>
@@ -25,11 +17,11 @@
 
     <div style="padding-left:22%; padding-right:25%; padding-top:5px">
       <div style="font-size:30px; padding-top:20px;
-      padding-bottom:30px"><strong>Tim
+		  padding-bottom:5px"><strong>Tim
       Wood</strong><hr style="border-top:3px solid #000000"></div>
-	<h2><a name=cv><a href="tim-wood-cv.pdf">Curriculum Vitae</a></a></h2>
+	<h2><a name=cv>Curriculum Vitae</a></h2>
 	<ul>
-	  <li><p>Last updated 01/10/2018.</p></li>
+	  <li><p><a href="tim-wood-cv.pdf">pdf</a> (last updated 01/10/2018)</p></li>
 	</ul>
       </div>
     </div>
