Made it look better

--- a/index.html
+++ b/index.html
@@ -3,23 +3,20 @@
   <link rel="stylesheet" href="styles.css">
   
   <head>
-    <title>Tim Wood</title>
+    <title>Tim Wood's homepage</title>
   </head>
 
   <body>
-
-    <!-- Side navigation -->
-    <div class="sidenav">
-      <a href="index.html">About me</a>
-      <a href="cv.html">CV</a>
-      <a href="publications.html">Publications</a>
-    </div>
-
-    <div style="padding-left:22%; padding-right:25%; padding-top:5px">
-      <div style="font-size:30px; padding-top:20px;
-		  padding-bottom:5px">
-	<strong>Tim Wood</strong>
-	<hr style="border-top:3px solid #000000">
+    <div class="side-padding">
+      <div style="font-size:30px; padding-top:40px; padding-bottom:40px;">
+	<strong>
+	  Tim Wood
+	</strong>
+      </div>
+      <div class="topnav">
+	<a href="index.html">About me</a>
+	<a href="cv.html">CV</a>
+	<a href="publications.html">Publications</a>
       </div>
       
       <h2><a name=about>About Me</a></h2>
