Added gpg key link and blog

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<a href="index.html">About me</a>
 	<a href="cv.html">CV</a>
 	<a href="publications.html">Publications</a>
+	<a href="blog.html">Blog</a>
       </div>
       
       <h2><a name=about>About Me</a></h2>
@@ -33,7 +34,13 @@
 	    College of Music.</p></li>
 	<li><h3>Not Work and Not Education</h3>
 	  <p>In my spare time, I enjoy playing the piano, doing cryptic
-	    crosswords, and worshipping at Kensington Baptist Church, Bristol.</p></li>
+	    crosswords, and worshipping at Kensington Baptist Church,
+	    Bristol.</p>
+	  <p>gpg public
+	  key: <a target="_blank"
+	  href="https://pgp.mit.edu/pks/lookup?search=tim+wood">MIT PGP database</a>
+	  <a target="_blank" href="https://keyserver.ubuntu.com/pks/lookup?search=tim+wood&fingerprint=on&op=vindex">Ubuntu PGP database</a></p>
+	</li>
       </ul>
   </body>
 </html>
