--- a/publications.html
+++ b/publications.html
@@ -17,6 +17,7 @@
 	<a href="index.html">About me</a>
 	<a href="cv.html">CV</a>
 	<a href="publications.html">Publications</a>
+	<a href="blog.html">Blog</a>
       </div>
       
       <h2><a name=publications>Publications</a></h2>
