--- a/cv.html
+++ b/cv.html
@@ -7,23 +7,25 @@
   </head>
 
   <body>
-    <div class="side-padding">
-      <div style="font-size:30px; padding-top:40px; padding-bottom:40px;">
-	<strong>
-	  Tim Wood
-	</strong>
-      </div>
-      <div class="topnav">
-	<a href="index.html">About me</a>
-	<a href="cv.html">CV</a>
-	<a href="publications.html">Publications</a>
-	<a href="blog.html">Blog</a>
-      </div>
+    <div class="aligning">
+      <div class="side-padding">
+	<div style="font-size:30px; padding-top:40px; padding-bottom:40px;">
+	  <strong>
+	    Tim Wood
+	  </strong>
+	</div>
+	<div class="topnav">
+	  <a href="index.html">About me</a>
+	  <a href="cv.html">CV</a>
+	  <a href="publications.html">Publications</a>
+	  <a href="blog.html">Blog</a>
+	</div>
 
-      <h2><a name=cv>Curriculum Vitae</a></h2>
-      <ul>
-	<li><p><a href="tim-wood-cv.pdf">pdf</a> (last updated 01/10/2018)</p></li>
-      </ul>
+	<h2><a name=cv>Curriculum Vitae</a></h2>
+	<ul>
+	  <li><p><a href="tim-wood-cv.pdf">pdf</a> (last updated 01/10/2018)</p></li>
+	</ul>
+	<div style="height:50px"></div>
       </div>
     </div>
   </body>
