--- a/index.html
+++ b/index.html
@@ -7,40 +7,43 @@
   </head>
 
   <body>
-    <div class="side-padding">
-      <div style="font-size:30px; padding-top:40px; padding-bottom:40px;">
-	<strong>
-	  Tim Wood
-	</strong>
+    <div class="aligning">
+      <div class="side-padding">
+	<div style="font-size:30px; padding-top:40px; padding-bottom:40px;">
+	  <strong>
+	    Tim Wood
+	  </strong>
+	</div>
+	<div class="topnav">
+	  <a href="index.html">About me</a>
+	  <a href="cv.html">CV</a>
+	  <a href="publications.html">Publications</a>
+	  <a href="blog.html">Blog</a>
+	</div>
+	
+	<h2><a name=about>About Me</a></h2>
+	<ul>
+	  <li><h3>Work</h3>
+	    <p>I am a PhD student at the University of Bristol, currently working
+	      at KU Leuven, Belgium.  My supervisor is Nigel Smart
+	      and I specialise in multiparty computation (MPC) and
+	      linear secret sharing schemes (LSSS).</p></li>
+	  <li><h3>Education</h3>
+	    <p>I hold a first class Master of Mathematics (MMath)
+	      from the University of Warwick and a Diploma of Music
+	      Performance (DipLCM) with distinction from the London
+	      College of Music.</p></li>
+	  <li><h3>Not Work and Not Education</h3>
+	    <p>In my spare time, I enjoy playing the piano, doing cryptic
+	      crosswords, and worshipping at Kensington Baptist Church,
+	      Bristol.</p>
+	    <p>gpg public
+	      key: <a target="_blank"
+		      href="https://pgp.mit.edu/pks/lookup?search=tim+wood">MIT PGP database</a>
+	      <a target="_blank" href="https://keyserver.ubuntu.com/pks/lookup?search=tim+wood&fingerprint=on&op=vindex">Ubuntu PGP database</a></p>
+	  </li>
+	</ul>
+	<div style="height:50px"></div>
       </div>
-      <div class="topnav">
-	<a href="index.html">About me</a>
-	<a href="cv.html">CV</a>
-	<a href="publications.html">Publications</a>
-	<a href="blog.html">Blog</a>
-      </div>
-      
-      <h2><a name=about>About Me</a></h2>
-      <ul>
-	<li><h3>Work</h3>
-	  <p>I am a PhD student at the University of Bristol, currently working
-	    at KU Leuven, Belgium.  My supervisor is Nigel Smart
-	    and I specialise in multiparty computation (MPC) and
-	    linear secret sharing schemes (LSSS).</p></li>
-	<li><h3>Education</h3>
-	  <p>I hold a first class Master of Mathematics (MMath)
-	    from the University of Warwick and a Diploma of Music
-	    Performance (DipLCM) with distinction from the London
-	    College of Music.</p></li>
-	<li><h3>Not Work and Not Education</h3>
-	  <p>In my spare time, I enjoy playing the piano, doing cryptic
-	    crosswords, and worshipping at Kensington Baptist Church,
-	    Bristol.</p>
-	  <p>gpg public
-	  key: <a target="_blank"
-	  href="https://pgp.mit.edu/pks/lookup?search=tim+wood">MIT PGP database</a>
-	  <a target="_blank" href="https://keyserver.ubuntu.com/pks/lookup?search=tim+wood&fingerprint=on&op=vindex">Ubuntu PGP database</a></p>
-	</li>
-      </ul>
   </body>
 </html>
