Edited title settings

--- a/blog.html
+++ b/blog.html
@@ -8,13 +8,8 @@
 
   <body>
     <div class="aligning">
-      
       <div class="side-padding">
-	<div style="font-size:30px; padding-top:40px; padding-bottom:40px;">
-	  <strong>
-	    Tim Wood
-	  </strong>
-	</div>
+	<h1>Tim Wood</h1>
 	<div class="topnav">
 	  <a href="index.html">About me</a>
 	  <a href="cv.html">CV</a>
