--- a/cv.html
+++ b/cv.html
@@ -9,11 +9,7 @@
   <body>
     <div class="aligning">
       <div class="side-padding">
-	<div style="font-size:30px; padding-top:40px; padding-bottom:40px;">
-	  <strong>
-	    Tim Wood
-	  </strong>
-	</div>
+	<h1>Tim Wood</h1>
 	<div class="topnav">
 	  <a href="index.html">About me</a>
 	  <a href="cv.html">CV</a>
@@ -25,7 +21,7 @@
 	<ul>
 	  <li><p><a href="tim-wood-cv.pdf">pdf</a> (last updated 01/10/2018)</p></li>
 	</ul>
-	<div style="height:50px"></div>
+	<div class="footer-padding"></div>
       </div>
     </div>
   </body>
