--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
   <body>
     <div class="aligning">
       <div class="side-padding">
-	<div style="font-size:30px; padding-top:40px; padding-bottom:40px;">
-	  <strong>
-	    Tim Wood
-	  </strong>
-	</div>
+	<h1>Tim Wood</h1>
 	<div class="topnav">
 	  <a href="index.html">About me</a>
 	  <a href="cv.html">CV</a>
@@ -43,7 +39,7 @@
 	      <a target="_blank" href="https://keyserver.ubuntu.com/pks/lookup?search=tim+wood&fingerprint=on&op=vindex">Ubuntu PGP database</a></p>
 	  </li>
 	</ul>
-	<div style="height:50px"></div>
+	<div class="footer-padding"></div>
       </div>
   </body>
 </html>
