Added link to NPS; added missing word

--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
 	<h2><a name=about>About Me</a></h2>
 	<ul>
 	  <li><h3>Work</h3>
-	    <p>I am a PhD student at the University of Bristol, currently working
-	      at KU Leuven, Belgium.  My supervisor is Nigel Smart
-	      and I specialise in multiparty computation (MPC) and
-	      linear secret sharing schemes (LSSS).</p></li>
+	    <p>I am a PhD student at the University of Bristol,
+	      currently working at KU Leuven, Belgium.  My supervisor
+	      is <a target="_blank" href="https://homes.esat.kuleuven.be/~nsmart/">Nigel
+	      Smart</a> and I specialise in multiparty computation
+	      (MPC) and linear secret sharing schemes (LSSSs).</p></li>
 	  <li><h3>Education</h3>
 	    <p>I hold a first class Master of Mathematics (MMath)
-	      from the University of Warwick and a Diploma of Music
-	      Performance (DipLCM) with distinction from the London
-	      College of Music.</p></li>
+	      degree from the University of Warwick and a Diploma of
+	      Music Performance (DipLCM) with distinction from the
+	      London College of Music.</p></li>
 	    <p>gpg public
 	      key: <a target="_blank"
 		      href="https://pgp.mit.edu/pks/lookup?search=tim+wood">MIT PGP database</a>
