Updated CT-RSA info and added COSIC reference

--- a/publications.html
+++ b/publications.html
@@ -25,13 +25,15 @@
 	      Communication-Efficient Multi-Party Computation</h3>
 	    <ul>
 	      <li><h4>Nigel Smart and Tim Wood</h4></li>
-	      <li><p>Available on <a href="http://ia.cr/2018/467">ePrint</a></p></li>
+	      <li><p>To appear at <a href=http://www.venus.dti.ne.jp/matsui/index.html>CT-RSA 2019</a>
+		  <a href="http://ia.cr/2018/467">ePrint</a></p></li>
 	    </ul>
 	  </li>
 	  <li><h3>Reducing Communication Channels in MPC</h3>
 	    <ul>
-	      <li><h4>Marcel Keller, Nigel Smart, Dragos Rotaru and Tim Wood</h4></li>
-	      <li><p>Published at SCN 2018
+	      <li><h4>Marcel Keller, Dragos Rotaru, Nigel Smart, and
+	      Tim Wood</h4></li>
+	      <li><p>Published at <a href=http://scn.di.unisa.it/>SCN 2018</a>
 		  <a href="http://ia.cr/2017/492">ePrint</a> <a href="scn18.bib">bibtex</a> <a href="talk-scn18.pdf">slides</a></p></li>
 	    </ul>
 	  </li>
@@ -41,8 +43,8 @@
 	      Preprocessing</h3>
 	    <ul>
 	      <li><h4>Peter Scholl, Nigel Smart and Tim Wood</h4></li>
-	      <li><p>Published at IMACC
-		  2017 <a href="http://ia.cr/2017/262">ePrint</a> <a href="ima17.bib">bibtex</a>
+	      <li><p>Published at <a href=https://ima.org.uk/6153/16th-ima-international-conference-on-cryptography-and-coding/>IMACC 2017</a>
+		  <a href="http://ia.cr/2017/262">ePrint</a> <a href="ima17.bib">bibtex</a>
 		  <a href="talk-ima17.pdf">slides</a></p></li>
 	    </ul>
 	  </li>
