--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
 	<ul>
 	  <li><h3>Work</h3>
 	    <p>I am a PhD student at the University of Bristol,
-	      currently working at KU Leuven, Belgium.  My supervisor
-	      is <a target="_blank" href="https://homes.esat.kuleuven.be/~nsmart/">Nigel
-	      Smart</a> and I specialise in multiparty computation
-	      (MPC) and linear secret sharing schemes (LSSSs).</p></li>
+	      currently working at KU Leuven, Belgium in the Computer
+	      Security and Industrial Cryptography (COSIC) research
+	      group.  I am supervised by <a target="_blank"
+	      href="https://homes.esat.kuleuven.be/~nsmart/">Nigel
+	      Smart</a> and am working on privacy-preserving
+	      computation, specifically multiparty computation (MPC)
+	      and linear secret sharing schemes (LSSSs).</p></li>
 	  <li><h3>Education</h3>
 	    <p>I hold a first class Master of Mathematics (MMath)
 	      degree from the University of Warwick and a Diploma of
