Added LinkedIn, Google Scholar and Stack Exchange links

--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
 	      degree from the University of Warwick and a Diploma of
 	      Music Performance (DipLCM) with distinction from the
 	      London College of Music.</p></li>
-	    <p>gpg public
-	      key: <a target="_blank"
-		      href="https://pgp.mit.edu/pks/lookup?search=tim+wood">MIT PGP database</a>
+	  <li><h3>Other</h3>
+	    <p><a target="_blank" href='https://uk.linkedin.com/in/tim-wood-000a2599'>LinkedIn</a></p>
+	    <p><a target="_blank" href="https://scholar.google.com/citations?view_op=list_works&hl=en&authuser=1&user=GMMB5GEAAAAJ">Google Scholar</a></p>
+	    <p><a target="_blank" href="https://crypto.stackexchange.com/users/62200/twood">Stack Exchange</a></p>
+	    <p>gpg public key:
+	      <a target="_blank" href="https://pgp.mit.edu/pks/lookup?search=tim+wood">MIT PGP database</a>
 	      <a target="_blank" href="https://keyserver.ubuntu.com/pks/lookup?search=tim+wood&fingerprint=on&op=vindex">Ubuntu PGP database</a></p>
 	  </li>
 	</ul>
