Added ctrsa; added marbled circuits

--- a/publications.html
+++ b/publications.html
@@ -19,14 +19,22 @@
 	
 	<h2><a name=publications>Publications</a></h2>
 	<ul style="list-style:circle">
+	  2019
+	  <hr>
+	  <li><h3>MArBled Circuits: Mixing Arithmetic and Boolean Circuits with Active Security</h3>
+	    <ul>
+	      <li><h4>Dragos Rotaru and Tim Wood</h4></li>
+	      <li><p>Available on <a href="http://ia.cr/2019/207">ePrint</a></p></li>
+	    </ul>
+	  </li>
 	  2018
 	  <hr>
 	  <li><h3>Error Detection in Monotone Span Programs with Application to
 	      Communication-Efficient Multi-Party Computation</h3>
 	    <ul>
 	      <li><h4>Nigel Smart and Tim Wood</h4></li>
-	      <li><p>To appear at <a href=http://www.venus.dti.ne.jp/matsui/index.html>CT-RSA 2019</a>
-		  <a href="http://ia.cr/2018/467">ePrint</a></p></li>
+	      <li><p>Published at <a href=http://www.venus.dti.ne.jp/matsui/index.html>CT-RSA 2019</a>
+		  <a href="http://ia.cr/2018/467">ePrint</a> <a href="ctrsa19.bib">bibtex</a></p></li>
 	    </ul>
 	  </li>
 	  <li><h3>Reducing Communication Channels in MPC</h3>
